[tool.poetry]
name = "fix-conda-ssl"
version = "0.3.2"
description = "Fix Conda SSLError on Windows by copying DDLs"
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
packages = [{ include = "fix_conda_ssl", from = "src" }]
homepage = "https://github.com/davidfokkema/fix-conda-ssl"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.41.0"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.2.1"

[tool.poetry.scripts]
fixconda = "fix_conda_ssl.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
